Workaround sidebar visibility issues with Protractor and IE
Former-commit-id: 75f2a409bf57ccb129ab6c340c296e96a5415029

--- a/components/sidebar/sidebar.scss
+++ b/components/sidebar/sidebar.scss
@@ -15,10 +15,12 @@
 
   overflow: hidden;
   background: #FFF;
-  transition: left 0.5s ease;
+  transition: left 0.5s ease, visibility 0.5s;
+  visibility: hidden;
 }
 
 .ring-sidebar_active {
+  visibility: visible;
   left: 50%;
 
   overflow: auto;
